# libnbcompat

./: .gitignore  CHANGES  Makefile.am  Makefile.in  README  autogen.sh  configure.ac  lchflags.c  nbcompat.h  rmd160-test.c  sha1-test.c  sha2-test.c  sha2.c  sha2hl.c
.github/workflows/: test.yml
CVS/: Entries
include/CVS/: Repository
m4/: aclocal-bsd.m4
nbcompat/: assert.h  cdefs.h  ctype.h  db.h  dirent.h  endian.h  err.h  fnmatch.h  fts.h  getopt.h  glob.h  grp.h  limits.h  md5.h  mpool.h  ndbm.h  netdb.h  param.h  paths.h  poll.h  pwd.h  queue.h  regex.h  rmd160.h  sha1.h  sha2.h  stat.h  statvfs.h  stdbool.h  stdio.h  stdlib.h  string.h  termcap.h  time.h  types.h  tzfile.h  unistd.h  util.h  vis.h
private/: cavs2c.awk  test-helpers.h
